# MyOpenCV

./: CMakeLists.txt  MyOpenCV.cpp  MyOpenCV.h  demo.cpp  demo.h  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp
